// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonorCard renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-pbJYR hNzbLI sc-pkfPC fCxHK"
  >
    <div
      class="sc-AxjAm sc-qYsuA sc-psDhf IA-Dcs"
      color="background.lightest"
      data-testid="donor-card"
      width="1"
    >
      <div
        class="sc-AxhCb jTwMnz"
        color="text.darkest"
        font-size="1"
      />
      <div
        class="sc-AxhCb jMzzet"
        color="text.light"
        font-size="1"
      >
        Last Donation: -
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DonorCard skeleton renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-pbJYR hNzbLI sc-pkfPC fCxHK"
  >
    <div
      class="sc-AxjAm sc-qYsuA sc-psDhf IA-Dcs"
      color="background.lightest"
      width="1"
    >
      <span>
        <span
          class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
          style="width: 20%; height: 14px;"
        >
          ‌
        </span>
      </span>
      <span>
        <span
          class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
          style="width: 40%; height: 14px;"
        >
          ‌
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
